k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
        group: backend
    spec:
      containers:
        - name: backend-api
          image: anadk/vorto-coffeeshop-api:1.0
          ports:
            - containerPort: 8080
