k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels: 
    group: backend
spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
    - port: 8080
      targetPort: 8080
