k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /adminer/
            backend:
              serviceName: adminer
              servicePort: 8080
          - path: /
            backend:
              serviceName: backend-api
              servicePort: 8080
